test/invalid/constant_none.py
def main() -> None:
    x: None = None
    return x